--- a/spacemacs/.emacs.d/private/colemak-hjkl/README.org
+++ b/spacemacs/.emacs.d/private/colemak-hjkl/README.org
@@ -1,4 +1,29 @@
-* Related issues
+* Colemak HJKL contribution layer for Spacemacs
+** Description
+Remaps HJKL bindings used for navigation to JKHL, as they make more sense on a
+[[http://colemak.com/][Colemak]] layout.
+
+** Install
+To use this contribution add it to your =~/.spacemacs=
+
+#+begin_src emacs-lisp
+  (setq-default dotspacemacs-configuration-layers '(colemak-hjkl))
+#+end_src
+
+** Key bindings
+Most HJKL bindings bound by evil and Spacemacs are rebound to JKHL (L is thus
+unchanged).
+
+There is one exception in motion state:
+
+| Key Binding | Description                              |
+|-------------+------------------------------------------|
+| ~H~         | Scroll cursor to top of window           |
+| ~K~         | Scroll cursor to bottom  of window       |
+| ~L~         | Lookup documentation of element at point |
+|             |                                          |
+
+** Related efforts
 Other people have asked on the Spacemacs issue tracker how to remap HJKL.
 
 - [[https://github.com/syl20bnr/spacemacs/issues/1250][#1250]] suggests to use ~define-key~.
