Remind me to install xdotool

--- a/spacemacs/.emacs.d/private/fmdkdd/README.org
+++ b/spacemacs/.emacs.d/private/fmdkdd/README.org
@@ -1,3 +1,6 @@
 * fmdkdd contribution layer for Spacemacs
 ** Description
 Personal Spacemacs configuration layer.
+
+** Requirements
+- =xdotool= is required for reloading the browser.
